finished new products pages

--- a/app/views/psd-products-area/index.html
+++ b/app/views/psd-products-area/index.html
@@ -59,7 +59,7 @@
             </h2>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                <li>The page automatically loads displaying all the products related to <b>open</b> cases owned by the user</li>
+                <li>The page automatically loads displaying all the products linked to <b>open</b> cases owned by the user. <br>(There are sometimes more than one product linked to a case)</li>
                 <li>The list of products are automatically ordered by Newly added</li>
                 <li>Only if there are 12 or more products is the 'Sort by' options added to the page (as like the Cases pages).</li>
                 <li>If there are no (zero) products, the sorting options are omitted.</li>
@@ -72,6 +72,7 @@
                         <li>Remove #results <abbr>ID</abbr> from the <abbr>HTML</abbr> table tag.</li>
                         <li>aria-label="Cases" is now aria-label="Products"</li>
                         <li>Text in table CAPTION updated.</li>
+                        <li>Unique text on the no results page.</li>
                     </ul>
                 </li>
             </ul>
@@ -93,7 +94,8 @@
             </h2>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
-                <li>The page automatically loads displaying all the products related to <b>open</b> cases owned by the team</li>
+                <li>The page automatically loads displaying all the products linked to <b>open</b> cases owned by the team. <br>(There are sometimes more than one product linked to a case)</li>
+                <li>Unique text on the no results page.</li>
                 <li>Everything else, as above.</li>
             </ul>
 
@@ -134,12 +136,12 @@
                 </li>
             </ul>            
             
-            <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
+            <ul class="govuk-list govuk-list--bullet govuk-!-margin-bottom-9">
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/all-products.html" target="_blank">All products - Search</a>. 
                 </li>
              
-            </ol> 
+            </ul> 
             
             <!--hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible"-->
 
@@ -148,7 +150,7 @@
                 <p>Some legacy edits missed recently and only recently spotted, while creating these products pages.</p>
                 <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                     <li>The help link text to be updated</li>
-                    <li>Full width class on the results overview sentence (wrapping div now: 'govuk-grid-column-full')</li>
+                    <li>Full width class on the results overview sentence (wrapping div now: 'govuk-grid-column-full') on the Your cases and Team cases page</li>
                     <li>The hidden skip link <code>href</code> to be updated from <code>#results</code> to <code>#page-content</code></li>
                 </ul>
                 <p class="govuk-body">Design: <a class="govuk-link govuk-link--no-visited-state" href="/psd-cases-area/all-cases.html" target="_blank">All cases - search: design</a></p>
