--- a/app/views/psd-products-area/no-products-example.html
+++ b/app/views/psd-products-area/no-products-example.html
@@ -1,7 +1,7 @@
 {% extends "layout-routes-02.html" %}
 
 {% block pageTitle %}
-    Your cases
+    Your products
 {% endblock %}
 
 
@@ -11,21 +11,15 @@
     <div class="govuk-grid-column-two-thirds opss-desktop-min-height--s"> 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Your cases 
+            Your products 
         </h1>
 
         <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            You are the case owner of 0 open cases.
+            There are 0 products linked to open cases where you are the case owner. 
         </p>
 
     </div>
-    <div class="govuk-grid-column-one-third">
-        <div class="opss-text-align-right govuk-!-margin-bottom-8">
-            <a href="find-the-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                Create a case
-            </a>            
-        </div>
-    </div>
+
 </div>
 
 <div class="govuk-grid-row opss-full-height">
@@ -39,29 +33,27 @@
         <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                 <li class="opss-left-nav__active">
-                    <a href="/psd-products-area/your-products-sorting.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Your cases</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/your-products-sorting.html" aria-current="page">Your products</a>
                 </li>
                 <li>
-                    <a href="/psd-products-area/team-products.html" class="govuk-link govuk-link--no-visited-state">Team cases</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/team-products.html">Team products</a>
                 </li>
                 <li>
-                    <a href="/psd-products-area/all-products.html" class="govuk-link govuk-link--no-visited-state">All cases &ndash; Search</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/all-products.html">All products - Search</a>
                 </li>
             </ul>
-        </nav>
+          </nav>
 
     </section>
 
     <section class="govuk-grid-column-three-quarters" id="page-content">
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full" role="region" aria-label="Cases">
-
+            <div class="govuk-grid-column-full" role="region" aria-label="Products">
 
                 <p class="govuk-body opss-text-align-center">
-                   You have no open cases. <br>You can find all other cases in the <a href="/psd-products-area/all-products.html" class="govuk-link govuk-link--no-visited-state">all cases</a> search page.
-                </p>
-
+                    There are no product records linked to your open cases. <br>You can search all product records in the <a href="/psd-products-area/all-products.html" class="govuk-link govuk-link--no-visited-state">all products</a> search page.
+                 </p>
 
             </div>
         </div>        
