--- a/app/views/includes/headpsdmenu.html
+++ b/app/views/includes/headpsdmenu.html
@@ -1,6 +1,9 @@
 <!--[if lte IE 8]><link href="/public/stylesheets/application-ie8.css" rel="stylesheet" type="text/css" /><![endif]-->
 <!--[if gt IE 8]><!--><link href="/public/stylesheets/application.css" media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
-<link href="/public/stylesheets/layout-psd-menu-layout.css" media="all" rel="stylesheet" type="text/css" />
+
+<!-- *** this is the psd menu css: not ie8 starts *** -->
+<link href="/public/stylesheets/psd-menu.css" media="all" rel="stylesheet" type="text/css" />
+<!-- *** this is the psd menu css: not ie8 ends *** -->
 
 {% for stylesheetUrl in extensionConfig.stylesheets %}
   <link href="{{ stylesheetUrl }}" rel="stylesheet" type="text/css" />
