--- a/app/views/layout-psd-menu_cases.html
+++ b/app/views/layout-psd-menu_cases.html
@@ -101,7 +101,7 @@
                 <li class="psd-header__navigation-item">
                   <a class="psd-header__link" href="#">Home</a>
                 </li>
-                <li class="psd-header__navigation-item psd-header__navigation-item--active">
+                <li class="psd-header__navigation-item">
                     <a class="psd-header__link" href="#">Cases</a>
                 </li>
                 <li class="psd-header__navigation-item ">
