--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -6,8 +6,15 @@
 
 
 
-{% block content %}
 
+
+
+
+
+{% block content %}
+<!--style>
+#navigation li:nth-child(2)  {border-bottom: 2px solid red; }
+</style-->
 {% include "psd-revised-flow/inc_products_pg_content.html" %}
 
 {% endblock %}
