new pages for COS ingredients

--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-4.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-4.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Ingredient 2
+    Ingredient 4
 {% endblock %}
 
 {% block beforeContent %}
@@ -26,16 +26,16 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% include "cosmetics-general/inc_tables-details.html" %}        
+      {% include "cosmetics-general/inc_tables-details.html" %}         
       
       <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-0 govuk-!-margin-bottom-6">
 
-      <form id="skip-to-form" action="ingredient-2b-how-many-2.html" novalidate>
+      <form id="skip-to-form" action="ingredient-2b-how-many-4.html" novalidate>
         
         <div class="govuk-form-group govuk-!-margin-bottom-9">  
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              Ingredient 2
+              Ingredient 4
             </legend>
 
             {% include "cosmetics-general/inc_key-ingredients-form.html" %}
@@ -48,7 +48,7 @@
           </button>
         
           <a class="govuk-link govuk-link--no-visited-state" href="#">Skip</a>
-        </div> 
+        </div>        
 
       </form>
 
@@ -60,6 +60,9 @@
   
       <ol class="govuk-list govuk-list--number govuk-!-font-size-16 opss-secondary-text">
         <li>Lorem ipsum dolor sit amet </li>
+        <li>Consectetur adipisicing elit</li>
+        <li>Voluptas recusandae aliquid delectus</li>
+        <!--li>Saepe maiores rem dolor</li-->
       </ol>
   
       <p class="govuk-body-s opss-secondary-text">
