--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-5.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-5.html
@@ -42,9 +42,13 @@
           </fieldset>
         </div>    
 
-        <button class="govuk-button" data-module="govuk-button">
-          Save and continue
-        </button> 
+        <div class="govuk-button-group">
+          <button class="govuk-button" data-module="govuk-button">
+            Save and continue
+          </button>
+        
+          <a class="govuk-link govuk-link--no-visited-state" href="#">Skip</a>
+        </div>        
 
       </form>
 
