--- a/app/views/cosmetics-general/ingredient-2d-add.html
+++ b/app/views/cosmetics-general/ingredient-2d-add.html
@@ -21,7 +21,7 @@
         <fieldset class="govuk-fieldset" aria-describedby="add-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Do you want to add another ingredient? 
+              Do you want to add an ingredient? 
             </h1> 
           </legend>
 
