--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -14,12 +14,12 @@
       padding: 20px 0 5px 0; 
 
     }
-    li ul li, 
+    /*li ul li, 
     li ul li i {
         font-size: 80%; 
-    }
+    }*/
     li i {
-        font-size: 60%; 
+        font-size: 80%; 
     }
 </style>
 <div class="govuk-grid-row">
@@ -35,8 +35,12 @@
                     </h1>
 
                     <p class="govuk-body opss-secondary-text">
-                        Here are the initial designs - not finalised - for the new ingredients pages (to be inserted into the current user journey).
+                        Here are the initial design concepts - not finalised - for the new ingredients pages (to be inserted into the current user journey).
                     </p>
+
+                    <p class="govuk-body opss-secondary-text">
+                        All pages with initial inline notes.
+                    </p>                    
 
                 </div>
             </div>
@@ -54,14 +58,14 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient" target="_blank">Add the ingredients form</a> <br><i>We insert this page into the standard flow. There is contextual text refering to the ingredients of this product or this item. Click, Save and continue.</i>
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient" target="_blank">Add the ingredients form</a> <br><i>We insert this page into the standard tasks flow. There will be contextual text refering to the ingredients of this "product" or this "item". (After the first ingredient form page we add a Skip link). Click, Save and continue.</i>
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2b-how-many" target="_blank">Do you want to add another?</a> <i>We ask if the user wishes to add another ingredient for the product of the item. (Clicking No, allows the user to exit the loop). Click, Yes.</i>
+                            <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2b-how-many" target="_blank">Do you want to add another?</a> <i>A confirmation banner is shown (with contextual text); We ask if the user wishes to add another ingredient for the product of the item. (Clicking No, allows the user to exit the loop and continue the standard current journey). Click, Yes.</i>
                         </li>
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-2" target="_blank">Add another ingredient form</a> <i>This version shows the start of the list of ingredients already added to the product or item. Click, Yes (to see a longer list). </i>
+                            <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-2" target="_blank">Add another ingredient form</a> <i>This version shows the start of the list of ingredients already added to the product or item. Click, Yes - (repeatedly to see a longer list of 5). </i>
                         </li>  
                         <li>
                             <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-5" target="_blank">Add another ingredient form (with longer list)</a> <i>This version shows a list of ingredients already added to the product or item.</i>
@@ -77,25 +81,26 @@
                 Main design(s) - when editing 
             </h2>
 
-            <p class="govuk-body-s">Showing the 'remove' link which shows on this page only when editing drafts, re-taking tasks, or clicking through tasks that are 'In progress'.</p>
-            <p class="govuk-body-s">And showing the 'add a new ingredient' page, which is inserted into the flow, at the end of paging through the ingredients pages, only when editing drafts, re-taking tasks, or clicking through tasks that are 'In progress'.</p>            
+            <p class="govuk-body-s">Shows the 'Remove this ingredient' link (top right) which appears on this page only <b>when editing drafts, re-taking tasks, or clicking through tasks</b> that are 'In progress'.</p> 
+
+            <p class="govuk-body-s">This flow also shows the 'add a new ingredient' page, which is also inserted into the task flow at the end of paging through any ingredients pages - only when editing drafts, re-taking tasks, or clicking through tasks that are 'In progress'. If the user chooses to add a new ingredient, we also add the 'Skip' link in the following form page.</p>            
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-3-link" target="_blank">Add the ingredients form - with link</a> <br><i>When clicking Save and continue, the user simply pages onto the next ingredient in the list. We should update the title tags to read, 'Add the ingredients - ingredient [number]'.</i> 
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-3-link" target="_blank">Add the ingredients form - with link</a> <br><i>When clicking Save and continue, the user simply pages onto the next ingredient in the list. We should update the title tags to read, 'Add the ingredients <b>- ingredient [number]</b>'.</i> 
 
                     <ul class="govuk-list govuk-list--bullet">
                         <li>
                             <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2c-remove" target="_blank">Do you want to remove it?</a> <i>Clicking No, will return the user back to the previous page. electing no, takes the user onto the next page in the current journey. Click, Yes</i>
                         </li>
                         <li>
-                            <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2c-removed-confirmation" target="_blank">Removed - confirmed</a> <i>This standalone page is required as the ingredient may be the last in the list of ingredients (making inline success banners inappropriate). No back link. Contextual text "... from this product or this item". Click Continue; the user now goes to the next ingredient form page shown in the ingredients list. If this was the last ingredient the user goes to the 'Add an ingredient' page (below)</i>
+                            <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2c-removed-confirmation" target="_blank">Removed - confirmed</a> <i>This standalone page is required as the ingredient may be the last in the list of ingredients (making inline success banners inappropriate). No back link. Contextual text "... from this product or this item". Click Continue; the user now goes to the next ingredient form page shown in the ingredients list. If this is the last ingredient, the user is served the 'Add an ingredient' page (below)</i>
                         </li>
                     </ul>
                 </li>
 
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2d-add" target="_blank">Do you want to add a new ingredient to this product/item</a> <br><i>No, goes to the next page in the current journey, Yes, goes to a <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-5.html" target="_blank">blank ingredient page</a> to append another ingredient to the list (without a remove link). Contextual text "... to this product or to this item". The new ingredient is added immediately (before the end of the task). </i>                   
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2d-add" target="_blank">Do you want to add a new ingredient to this product/item</a> <br><i>No, continues to the next page in the standard current journey, Yes, goes to a <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-5.html" target="_blank">blank ingredient page</a> to append another ingredient to the list (without a remove link but with a skip link). Contextual text "... to this product or to this item". The new ingredient is added immediately (before the end of the task). </i>                   
                 </li>
 
             </ul> 
@@ -110,30 +115,30 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank">1</a> 
+                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank">2</a>  
+                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP  
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank">3</a>  
+                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP
                 </li>
             </ul> 
         </div>         
 
         <div class="govuk-!-padding-top-6 govuk-!-padding-right-4 govuk-!-padding-bottom-3 govuk-!-padding-left-5 govuk-!-margin-bottom-8 opss-border-all" style="background-color: #eee;">
-            <p class="govuk-body">
+            <p class="govuk-body strike">
                 Single form page design for all ingredients
             </p>
 
-            <p class="govuk-body-s">This pattern is included here for demonstration purposes but isn't an ideal solution(!)</p>
+            <p class="govuk-body-s strike">This pattern is included here for demonstration purposes but isn't an ideal solution(!)</p>
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredient-1a-how-many" target="_blank">How many page</a>. <i>User predicts how many entries (as part of this product or product item - we'd use conditional text). Click continue.</i>
+                    <a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/ingredient-1a-how-many" target="_blank">How many page</a>. <i>User predicts how many entries (as part of this product or product item - we'd use conditional text). Click continue.</i>
                 </li>
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="/cosmetics-general/ingredient-1b-how-many" target="_blank">Ingredient list of forms</a>. <i>All entries on the one page and continue with established flow(s).</i>
+                    <a class="govuk-link govuk-link--no-visited-state strike" href="/cosmetics-general/ingredient-1b-how-many" target="_blank">Ingredient list of forms</a>. <i>All entries on the one page and continue with established flow(s).</i>
                 </li>                    
             </ul>
         </div>        
