--- a/app/views/cosmetics-general/ingredient-2d-add.html
+++ b/app/views/cosmetics-general/ingredient-2d-add.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="continue" name="continue" type="radio" value="no">
+              <input class="govuk-radios__input" id="continue" name="add" type="radio" value="no">
               <label class="govuk-label govuk-radios__label" for="continue">
                 No
               </label>
