--- a/app/views/cosmetics-general/ingredients-pages.html
+++ b/app/views/cosmetics-general/ingredients-pages.html
@@ -45,7 +45,7 @@
                         The current examples (below) show forms referring to "<b>What is the concentration?</b>", but the user may choose the option to specify via "<b>percentages</b>". These will be identical forms (concentration substituted out for percentages). The second bullet point text at the start of each page will also be contextual.
                     </p>
 
-                    <p class="govuk-body opss-secondary-text">
+                    <p class="govuk-body">
                         Ingredients are added/saved upon selecting the 'Save and continue' buttons (not at the end of a given task).
                     </p> 
 
@@ -141,7 +141,7 @@
 
             <ul class="govuk-list govuk-list--bullet govuk-list--spaced">
                 <li>
-                    <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP All ingredient forms have validation to avoid users clearing out form content trying to remove it. The error message might suggest to use the Remove link instead.
+                    <a class="govuk-link govuk-link--no-visited-state" href="ingredient-2a-enter-ingredient-error1.html" target="_blank">Ingredient page</a> 
                 </li>
                 <li>
                     <a class="govuk-link govuk-link--no-visited-state" href="#" target="_blank"></a> WIP  
