--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -759,6 +759,17 @@ dd dl.opss-nested-definition-list {
         background-color: govuk-colour("light-grey");
     }
 
+    &.opss-table--borders {/* add horizontal lines to simple single rows table in one parent tbody */
+        tbody tr {
+            th, td {
+                border-bottom: 1px solid $govuk-border-colour;
+                padding-top: govuk-spacing(2); 
+                padding-bottom: govuk-spacing(2); 
+                vertical-align: middle; 
+            }
+        }
+    }
+
     &.opss-table-items--sm {
         thead th,
         tfoot th {
