corrected word typo

--- a/app/views/psd-businesses-area/all-businesses.html
+++ b/app/views/psd-businesses-area/all-businesses.html
@@ -128,7 +128,7 @@
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
               <p class="govuk-body">
-                  There are currently 105 products.
+                  There are currently 105 businesses.
               </p>
             </div>
           </div>        
