sort from recently to newly

--- a/app/views/psd-businesses-area/your-businesses.html
+++ b/app/views/psd-businesses-area/your-businesses.html
@@ -58,7 +58,7 @@
                         </label>
 
                         <select class="govuk-select govuk-!-margin-bottom-1" id="sort_by">
-                            <option selected="selected" data-url="/businesses?sort_by=updated_at">Recently added</option>
+                            <option selected="selected" data-url="/businesses?sort_by=updated_at">Newly added</option>
                             <option data-url="/businesses?sort_by=name&amp;sort_dir=asc">Name A-Z</option>
                             <option data-url="/businesses?sort_by=name&amp;sort_dir=desc">Name Z-A</option>
                         </select>
