change case of 1 letter

--- a/app/views/psd-businesses-area/all-businesses.html
+++ b/app/views/psd-businesses-area/all-businesses.html
@@ -21,7 +21,7 @@
       <details class="govuk-details opss-details--sm" data-module="govuk-details">
         
         <summary class="govuk-details__summary">
-          <span class="govuk-details__summary-text">Help with the Businesses search</span>
+          <span class="govuk-details__summary-text">Help with the businesses search</span>
         </summary>
         
         <div class="govuk-details__text">
